--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,14 +1,42 @@
-h1 {
-    display: flex;
-    justify-content: center;
-    background-color: peru
-  }
+header{
+  color: black;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color:orange;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  margin: 15px;
+  background: url(sdsadasd.jpg);
+  padding: 10px;
+}
+
+main {
   
-  .card-body{
-    background-color: orange;
-    padding: 1rem;
-  }
-  
-  .card-header {
-    background-color: peru;
-  }
+  display: flex ;
+  flex-wrap: wrap;
+  margin: 15px;
+  padding: 10px;
+}
+
+.card{
+  padding: 10px;
+  margin: 15px;
+}
+.card-header{
+  color: silver;
+  background-color: black
+}
+
+.list-group{
+  color: black;
+}
+
+
+.list-group-item{
+  white-space: nowrap;
+  overflow: visible;
+}
+#email {
+  color:green
+}
