--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,3 +1,5 @@
+
+
 header{
   color: black;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -7,7 +9,6 @@ header{
   justify-content: center;
   font-size: 2rem;
   margin: 15px;
-  background: url(sdsadasd.jpg);
   padding: 10px;
 }
 
@@ -22,6 +23,7 @@ main {
 .card{
   padding: 10px;
   margin: 15px;
+ background-color: blueviolet;
 }
 .card-header{
   color: silver;
@@ -36,7 +38,9 @@ main {
 .list-group-item{
   white-space: nowrap;
   overflow: visible;
+  
 }
 #email {
-  color:green
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-style: oblique;
 }
